--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "rc-input-number": "^7.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "4.3.1",
+    "react-numberinput": "^3.2.0",
     "react-scripts": "5.0.0",
+    "util": "^0.12.4",
+    "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
