--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "react-weather-book",
   "homepage": "http://jonasward.github.io/react-weather-book",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "electron": "^17.0.0",
     "rc-input-number": "^7.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "electron": "electron ."
   },
   "eslintConfig": {
     "extends": [
